--- a/templates/home.html
+++ b/templates/home.html
@@ -16,19 +16,37 @@
   
   <body>
 
+    
     <div class="container">
-      <form id="login_form">
+      <form id="signin_form">
         <h2>Sign in</h2>
         <div>
           <label class="title">Username</label>
-          <input type="text" id="login_username" name="username" class="form-control" required autofocus>
+          <input type="text" id="signin_username" name="username" class="form-control" required autofocus>
         </div>
         <div>
           <label class="title">Password</label>
-          <input type="password" id="login_password" name="password" class="form-control" required>       
+          <input type="password" id="signin_password" name="password" class="form-control" required>       
         </div>
         <div>
-          <input type="submit" id="login_submit" name="submitButton" value="Sign in">
+          <input type="submit" id="signin_submit" name="submitButton" value="Sign in">
+        </div>
+      </form>   
+    </div> 
+
+    <div class="container">
+      <form id="signup_form">
+        <h2>Sign in</h2>
+        <div>
+          <label class="title">Username</label>
+          <input type="text" id="signup_username" name="username" class="form-control" required autofocus readonly>
+        </div>
+        <div>
+          <label class="title">Password</label>
+          <input type="password" id="signup_password" name="password" class="form-control" required>       
+        </div>
+        <div>
+          <input type="submit" id="signup_submit" name="submitButton" value="Sign in">
         </div>
       </form>   
     </div> 
