Added recommendation system to the website

--- a/templates/account.html
+++ b/templates/account.html
@@ -50,8 +50,13 @@
           </div>
         </div>
         <br />
-        <div id="employee_table"></div>
       </div>
+
+      <div>
+        <button type="button" name="recommend_data" id="recommend_data" class="btn btn-info">Recommend me!</button>
+        <table id="userRecommendations"></table>
+      </div>
+
     </div>
 
   </body>
