--- a/templates/account.html
+++ b/templates/account.html
@@ -28,30 +28,49 @@
       </div>
         
       <div class="container">
-        <button type="button" name="add_data" id="add_data" class="btn btn-info">Add</button>
-        <div id="add_rating_div">
-          <label for="add_rating_id" id="add_rating_label">What rating would you like to add?</label>
-          <input type="number" id="add_rating_id" name="add_rating_id">
-          <label for="add_book_id" id="add_book_label">What book would you like to add the rating to?</label>
-          <input type="number" id="add_book_id" name="add_book_id">
-          <button type="button" name="add_data_confirm" id="add_data_confirm" class="btn btn-info">Confirm addition</button>
-        </div>
+          <button type="button" name="add_data" id="add_data" class="btn btn-info">Add</button>
+          <button type="button" name="edit_data" id="edit_data" class="btn btn-info">Edit</button>
+          <button type="button" name="delete_data" id="delete_data" class="btn btn-info">Delete</button>
+      </div>
 
-        <button type="button" name="edit_data" id="edit_data" class="btn btn-info">Edit</button>
-        <div id="edit_rating_div">
-          <label for="edit_book_id" id="edit_book_label">What book would you like the rating of?</label>
-          <input type="number" id="edit_book_id" name="edit_book_id">
-          <label for="edit_rating_id" id="edit_rating_label">What is the new rating?</label>
-          <input type="number" id="edit_rating_id" name="edit_rating_id">
-          <button type="button" name="edit_data_confirm" id="edit_data_confirm" class="btn btn-info">Confirm edit</button>
-        </div>
+      <div class="container">
+        <form id="add_rating_form">
+          <div>
+            <label for="add_rating_id" id="add_rating_label">What rating would you like to add?</label>
+            <input type="number" id="add_rating_id" name="add_rating_id" required>
+          </div>
+          <div>
+            <label for="add_book_id" id="add_book_label">What book would you like to add the rating to?</label>
+            <input type="number" id="add_book_id" name="add_book_id" required>
+          </div>  
+          <div>
+            <input type="submit" name="add_data_confirm" id="add_data_confirm" value="Confirm">
+          </div>  
+        </form>
 
-        <button type="button" name="delete_data" id="delete_data" class="btn btn-info">Delete</button>
-        <div id="delete_rating_div">
-          <label for="delete_id" id="delete_label">What book would you like to remove</label>
-          <input type="number" id="delete_id" name="delete_id">
-          <button type="button" name="delete_data_confirm" id="delete_data_confirm" class="btn btn-info">Confirm delete</button>
-        </div>
+        <form id="edit_rating_form">
+          <div>
+            <label for="edit_book_id" id="edit_book_label">What book would you like the rating of?</label>
+            <input type="number" id="edit_book_id" name="edit_book_id" required>
+          </div>
+          <div>
+            <label for="edit_rating_id" id="edit_rating_label">What is the new rating?</label>
+            <input type="number" id="edit_rating_id" name="edit_rating_id" required>
+          </div>
+          <div>
+            <input type="submit" name="edit_data_confirm" id="edit_data_confirm" value="Confirm">
+          </div>
+        </form>
+
+        <form id="delete_rating_form">
+          <div>
+            <label for="delete_id" id="delete_label">What book would you like to remove</label>
+            <input type="number" id="delete_id" name="delete_id" required>
+          </div>
+          <div>
+            <input type="submit" name="delete_data_confirm" id="delete_data_confirm" value="Confirm">
+          </div>
+        </form>
       </div>
 
       <div>
@@ -72,37 +91,62 @@
         </div>
       </div>
 
+      <div>
+          <button type="button" name="add_book" id="add_book" class="btn btn-info">Add</button>
+          <button type="button" name="edit_book" id="edit_book" class="btn btn-info">Edit</button>
+          <button type="button" name="delete_book" id="delete_book" class="btn btn-info">Delete</button>
+      </div>
+
       <div class="container">
-        <button type="button" name="add_book" id="add_book" class="btn btn-info">Add</button>
-        <div id="add_book_div">
-          <label for="add_book_name" id="add_book_name_label">What is the book's title?</label>
-          <input type="text" id="add_book_name" name="add_book_name">
-          <label for="add_book_author" id="add_book_author_label">Who is the book's author?</label>
-          <input type="text" id="add_book_author" name="add_book_author">
-          <label for="add_book_genre" id="add_book_genre_label">What are the book's genres?</label>
-          <input type="text" id="add_book_genre" name="add_book_genre">
-          <button type="button" name="add_book_confirm" id="add_book_confirm" class="btn btn-info">Confirm addition</button>
-        </div>
+        <form id="add_book_form">
+          <div>
+            <label for="add_book_name" id="add_book_name_label">What is the book's title?</label>
+            <input type="text" id="add_book_name" name="add_book_name" required autofocus>
+          </div>
+          <div>
+            <label for="add_book_author" id="add_book_author_label">Who is the book's author?</label>
+            <input type="text" id="add_book_author" name="add_book_author" required>
+          </div>
+          <div>
+            <label for="add_book_genre" id="add_book_genre_label">What are the book's genres?</label>
+            <input type="text" id="add_book_genre" name="add_book_genre" required>
+          </div>
+          <div>
+            <input type="submit" name="add_book_confirm" id="add_book_confirm" value="Confirm">
+          </div>
+        </form>
 
-        <button type="button" name="edit_book" id="edit_book" class="btn btn-info">Edit</button>
-        <div id="edit_book_div">
-          <label for="edit_book_id_" id="edit_book_id_label">What book would you like to edit? (ID)</label>
-          <input type="number" id="edit_book_id_" name="edit_book_id_">
-          <label for="edit_book_title" id="edit_book_title_label">What is the new title? (if applicable)</label>
-          <input type="text" id="edit_book_title" name="edit_book_title">
-          <label for="edit_book_author" id="edit_book_author_label">Who is the new author? (if applicable)</label>
-          <input type="text" id="edit_book_author" name="edit_book_author">
-          <label for="edit_book_genre" id="edit_book_genre_label">What are the new genre(s) (if applicable)</label>
-          <input type="text" id="edit_book_genre" name="edit_book_genre">
-          <button type="button" name="edit_book_confirm" id="edit_book_confirm" class="btn btn-info">Confirm edit</button>
-        </div>
+        <form id="edit_book_form">
+          <div>
+            <label for="edit_book_id_" id="edit_book_id_label">What book would you like to edit? (ID)</label>
+            <input type="number" id="edit_book_id_" name="edit_book_id_" required autofocus>
+          </div>
+          <div>
+            <label for="edit_book_title" id="edit_book_title_label">What is the new title? (if applicable)</label>
+            <input type="text" id="edit_book_title" name="edit_book_title">
+          </div>
+          <div>
+            <label for="edit_book_author" id="edit_book_author_label">Who is the new author? (if applicable)</label>
+            <input type="text" id="edit_book_author" name="edit_book_author">
+          </div>
+          <div>
+            <label for="edit_book_genre" id="edit_book_genre_label">What are the new genre(s) (if applicable)</label>
+            <input type="text" id="edit_book_genre" name="edit_book_genre">
+          </div>  
+          <div>
+            <input type="submit" name="edit_book_confirm" id="edit_book_confirm" value="Confirm">
+          </div>
+        </form>
 
-        <button type="button" name="delete_book" id="delete_book" class="btn btn-info">Delete</button>
-        <div id="delete_book_div">
-          <label for="delete_book_id" id="delete_book_id_label">What book would you like to remove? (ID)</label>
-          <input type="number" id="delete_book_id" name="delete_book_id">
-          <button type="button" name="delete_book_confirm" id="delete_book_confirm" class="btn btn-info">Confirm delete</button>
-        </div>
+        <form id="delete_book_form">
+          <div>
+            <label for="delete_book_id" id="delete_book_id_label">What book would you like to remove? (ID)</label>
+            <input type="number" id="delete_book_id" name="delete_book_id" required autofocus>
+          </div>
+          <div>
+            <input type="submit" name="delete_book_confirm" id="delete_book_confirm" value="Confirm">
+          </div>
+        </form>
       </div>
     </div>
 
