--- a/templates/account.html
+++ b/templates/account.html
@@ -17,8 +17,7 @@
   <body>
     <div class="container col-md-6">
       <div id = "title">
-        <h1>Information for account:</h1>
-        <h2 id="user_id">{{data}}</h2>
+        <h1>Information for account:<h1 id="user_id">{{data}}</h1></h1>
       </div>
 
       <div class="container">
